RESOLVED FIXED 275826
[iOS] Crash when selecting <datalist> menu item
https://bugs.webkit.org/show_bug.cgi?id=275826
Summary [iOS] Crash when selecting <datalist> menu item
Aditya Keerthi
Reported 2024-06-24 14:13:09 PDT
Attachments
Radar WebKit Bug Importer
Comment 1 2024-06-24 14:13:18 PDT
Aditya Keerthi
Comment 2 2024-06-24 14:14:07 PDT
Aditya Keerthi
Comment 3 2024-06-24 14:39:32 PDT
EWS
Comment 4 2024-06-25 11:14:36 PDT
Committed 280340@main (15238f5b3939): <https://commits.webkit.org/280340@main> Reviewed commits have been landed. Closing PR #30126 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.